--- a/day_5.ipynb
+++ b/day_5.ipynb
@@ -815,7 +815,7 @@
     "\n",
     "К счастью, из теории вероятностей мы можем узнать:\n",
     "1. есть случайные величины (Бернулли), которые принимают 0 или 1, причем 1 с вероятностью q,\n",
-    "2. существует распределение (*Beta-распределение*), такое что для `n` с вероятностью \"успеха\" каждого `q`, верно, что `q` распределена как `Beta`.\n",
+    "2. существует распределение (*Beta-распределение*), такое что для `n` испытаний с вероятностью \"успеха\" каждого `q`, верно, что `q` распределена как `Beta`.\n",
     "\n",
     "Количество ошибок и количество правильных - параметры $\\alpha$ и $\\beta$. При этом `Beta(1, 1)` эквивалентно равномерному распределению - то есть за один эксперимент равновероятно любое значение. Отметим, что его мат. ожидание $E = \\frac {\\alpha} {\\alpha + \\beta}$.\n",
     "\n",
