--- a/day_1.ipynb
+++ b/day_1.ipynb
@@ -394,11 +394,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Порог 0.0 дал улучшение, неправильных ответов 5\n",
-      "Порог 376.0 дал улучшение, неправильных ответов 4\n",
-      "Порог 438.0 дал улучшение, неправильных ответов 3\n",
-      "Порог 501.0 дал улучшение, неправильных ответов 2\n",
-      "Порог 563.0 дал улучшение, неправильных ответов 1\n"
+      "Порог 0.0 дал улучшение, неправильных ответов 3\n",
+      "Порог 536.0 дал улучшение, неправильных ответов 2\n",
+      "Порог 715.0 дал улучшение, неправильных ответов 1\n",
+      "Порог 805.0 дал улучшение, неправильных ответов 0\n"
      ]
     },
     {
@@ -422,7 +421,7 @@
     "train = data[:-3]\n",
     "test = data[-3:]\n",
     "\n",
-    "a, b, threshold = algorithm_create_model(data)\n",
+    "a, b, threshold = algorithm_create_model(train)\n",
     "\"Количество неправильных предсказаний из 3 тестовых: %d\" % metric(\n",
     "    test.tasty,\n",
     "    model(test.weight, test.radius, a, b, threshold)\n",
