--- a/day_1.ipynb
+++ b/day_1.ipynb
@@ -2625,6 +2625,8 @@
     "\n",
     "Здесь важно пояснить. Если с кросс-валидацией для регрессии всё просто - бьем на части, учимся на одних, проверяем качество на отложенной, то с классификацией всё почти так же... за исключением того момента, что разбиение на части производится ***стратифицированно***: датасет бьется на части так, чтобы соотношение классов в каждой части сохранялось по отношению ко всему датасету. То есть если у нас 1/1/1 для всех цветков ириса, то при разбиении на части этот баланс будет сохранен.\n",
     "\n",
+    "> ВНИМАНИЕ! Метод `train_test_split` из *scikit-learn* делает по умолчанию стратифицированное разбиение при классификации. Это нужно и важно. В курсе иногда \"наивно\" используется `shuffle` (простое перемешивание), что не до конца корректно (при, опять же, классификации). Обращайте на это внимание. Как перемешаны данные - важно.\n",
+    "\n",
     "\"В природе\" так же встречаются и сильно несбалансированные датасеты - для работы с этим используются отдельные техники: либо классы балансируют, либо работают с регуляризацией (штрафами модели на коэффициенты), либо используют веса для примеров (вес редкого примера выше, такие веса можно передавать третьим параметром `fit` у некоторых алгоритмов)."
    ]
   },
