small text tune

--- a/day_4.ipynb
+++ b/day_4.ipynb
@@ -115,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Раз у нас задача классификации, и классов более двух, наша сеть нам должна отдавать вектор (вероятностей), где индекс наибольшего числа будет указывать на предсказанный класс. Делается это с помощью функции `softmax(x1, ..., xk) = (e(x1) / sum(e(xj)), ..., e(xk) / sum(e(xj))), j = 1..k`"
+    "Раз у нас задача классификации, и классов более двух, наша сеть нам должна отдавать вектор (неоткалиброванных вероятностей), где индекс наибольшего числа будет указывать на предсказанный класс. Делается это с помощью функции `softmax(x1, ..., xk) = (e(x1) / sum(e(xj)), ..., e(xk) / sum(e(xj))), j = 1..k`"
    ]
   },
   {
