--- a/day_3.ipynb
+++ b/day_3.ipynb
@@ -547,7 +547,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Существует достаточно сложный метод `UMAP`, который всегда укладывает только на плоскость все данные, обычно для целей визуализации. Не так сейчас важно как он работает в теории (в теории он ищет меньший граф связей, похожий на полученный из данных), сколько важно посмотреть как он отработает на наших данных.\n",
+    "Существует достаточно сложный метод `UMAP`, который укладывает на плоскость все данные (может и в более высокие размерности, но не более размерности данных). Не так сейчас важно как он работает в теории (в теории он ищет меньший граф связей, похожий на полученный из данных, активно при этом эксплуатируя важность ближайших для каждой точки данных), сколько важно посмотреть как он отработает на наших данных.\n",
     "\n",
     "Суть в том, что он делает это нелинейно."
    ]
