fixes, enhances and gradcam

--- a/day_2.ipynb
+++ b/day_2.ipynb
@@ -1867,7 +1867,7 @@
     "3. И так сколько раз, сколько захотим (или пока ошибка не начнет меняться очень слабо).\n",
     "\n",
     "Например, если у нас \n",
-    "$y = kx + b$, а ошибка $$e = \\frac {\\sum (y - (kx - b))^2} {n},$$\n",
+    "$y = kx + b$, а ошибка $$e = \\frac {\\sum (y - kx - b)^2} {n},$$\n",
     "то производная ошибки по `k` будет равна\n",
     "$$e'_k = -2 \\frac {\\sum(x (y - kx - b))} {n},$$\n",
     "а для `b`: \n",
