--- a/day_3.ipynb
+++ b/day_3.ipynb
@@ -429,7 +429,7 @@
    "source": [
     "Как видим, ближайшие соседи могут даже сравниться с нейросетями.\n",
     "\n",
-    "> Имейте в виду! Когда мы отобрали по кросс-валидации лучшие гиперпараметры, перед отправкой модели в *среду эксплуатации* (для работы сайта например), мы можем её обучить с найденными параметрами уже на всех данных. Хуже от этого она предсказывать не будет - если вы, конечно, почистили данные от выбросов.\n",
+    "> Имейте в виду! Когда мы отобрали по кросс-валидации лучшие гиперпараметры, перед отправкой модели в *среду эксплуатации* (для работы сайта например), мы можем её обучить с найденными параметрами уже на всех данных (это делается в **GridSearchCV** по умолчанию параметром `refit=True`). Хуже от этого она предсказывать не будет - если вы, конечно, почистили данные от выбросов.\n",
     "\n",
     "\n",
     "### В качестве заключения\n",
